# Generated with zope.meta (https://zopemeta.readthedocs.io/) from:
# https://github.com/zopefoundation/meta/tree/master/src/zope/meta/pure-python
[build-system]
requires = [
    "setuptools >= 78.1.1,< 81",
    "wheel",
]
build-backend = "setuptools.build_meta"


[project]
name = "zExceptions"
version = "6.1.dev0"
description = "zExceptions contains common exceptions used in Zope."
license = "ZPL-2.1"
classifiers = [
    "Development Status :: 6 - Mature",
    "Environment :: Web Environment",
    "Framework :: Zope :: 5",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["readme"]
requires-python = ">=3.10"
authors = [
    {name = "Zope Foundation and contributors",email = "zope-dev@zope.dev"},
]
maintainers = [
    {name = "Plone Foundation and contributors",email = "zope-dev@zope.dev"},
]
dependencies = [
    "zope.interface",
    "zope.publisher",
    "zope.security",
]

[project.urls]
Source = "https://github.com/zopefoundation/zExceptions"
Issues = "https://github.com/zopefoundation/zExceptions/issues"
Changelog = "https://github.com/zopefoundation/zExceptions/blob/master/CHANGES.rst"

[tool.coverage.run]
branch = true
source = ["zExceptions"]

[tool.coverage.report]
fail_under = 86
precision = 2
ignore_errors = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "pragma: nocover",
    "except ImportError:",
    "raise NotImplementedError",
    "if __name__ == '__main__':",
    "self.fail",
    "raise AssertionError",
    "raise unittest.Skip",
]

[tool.coverage.html]
directory = "parts/htmlcov"

[tool.setuptools.dynamic]
readme = {file = ["README.rst", "CHANGES.rst"]}

